--- a/docs/scenarios/app-platform/toc.yml
+++ b/docs/scenarios/app-platform/toc.yml
@@ -30,20 +30,20 @@ items:
         href: aks/security.md
       - name: Management
         href: aks/management.md
-      - name: Governance
-        href: aks/governance.md
       - name: Platform automation and DevOps
         href: aks/platform-automation-and-devops.md
       - name: Scalability considerations for AKS
         href: aks/scalability.md
       - name: Storage considerations for AKS
         href: aks/storage.md
+      - name: Cost governance with Kubecost
+        href: aks/cost-governance-with-kubecost.md
 #      - name: Reference Architecture (placeholder)
 #        href: aks/landing-zone-accelerator.md
 #      - name: Reference Implementation (placeholder)
 #        href: aks/landing-zone-accelerator.md
-      - name: Azure API Management 
-        href: aks/landing-zone-accelerator.md
+#      - name: Azure API Management 
+#        href: aks/landing-zone-accelerator.md
 #      - name: Reference Implementation (placeholder)
 #        href: aks/landing-zone-accelerator.md
     - name: Azure API Management (APIM)
