--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -278,7 +278,19 @@ items:
             href: ready/landing-zone/design-area/azure-ad-define.md
 
         - name: Identity and access management
-          href: ready/landing-zone/design-area/identity-access.md
+          items: 
+          - name: Overview
+            href: ready/landing-zone/design-area/identity-access.md
+          - name: Active Directory
+            href: ready/landing-zone/design-area/identity-access-active-directory.md
+          - name: Platform access
+            href: ready/landing-zone/design-area/identity-access-platform-access.md
+          - name: Workload access
+            href: ready/landing-zone/design-area/identity-access-workload-access.md
+          - name: Hosting IaaS services
+            href: ready/landing-zone/design-area/identity-access-iaas-services.md
+          - name: Landing zones
+            href: ready/landing-zone/design-area/identity-access-landing-zones.md
 
         - name: Network topology and connectivity
           items:
