Infrastructure as Code (#17)
* Create infrastructure-as-code.md

* Update infrastructure-as-code.md

* Update infrastructure-as-code.md

* Update infrastructure-as-code.md

* Update toc.yml

* Update infrastructure-as-code.md

* Update infrastructure-as-code.md

* Update infrastructure-as-code.md

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infrastructure-as-code.md

Co-authored-by: sikovatc <53770775+sikovatc@users.noreply.github.com>

* Update docs/ready/considerations/infras

--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -409,6 +409,8 @@ items:
             items:
             - name: Development Lifecycle
               href: ready/considerations/development-strategy-development-lifecycle.md
+            - name: Infrastructure as Code
+              href: ready/considerations/infrastructure-as-code.md
             - name: Environments
               href: ready/considerations/environments.md
             - name: Test-driven development for Azure Landing Zones
