--- a/docs/scenarios/cloud-scale-analytics/toc.yml
+++ b/docs/scenarios/cloud-scale-analytics/toc.yml
@@ -140,7 +140,6 @@ items:
         href: architectures/data-mesh-master-data-management.md
       - name: Getting started checklist
         href: architectures/data-mesh-checklist.md
-
     - name: Reference architectures
       items:
       - name: Overview
@@ -162,6 +161,19 @@ items:
       href: ./architectures/connect-to-environments-privately.md
     - name: Frequently asked questions
       href: ./architectures/frequently-asked-questions.md
+
+  - name: Tutorials
+    items:
+    - name: Customer scenario
+      href: ../cloud-scale-analytics/tutorials/tutorial-customer-scenario.md
+    - name: Create data landing zone
+      href: ../cloud-scale-analytics/tutorials/tutorial-create-data-landing-zone.md
+    - name: Create data product
+      href: ../cloud-scale-analytics/tutorials/tutorial-create-data-product.md
+    - name: Data product interaction
+      href: ../cloud-scale-analytics/tutorials/tutorial-data-product-interaction.md
+    - name: Clean-up instructions
+      href: ../cloud-scale-analytics/tutorials/clean-up-instructions.md
 
   - name: Best practices
     items:
