--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1651,28 +1651,36 @@ items:
         href: /security/compass/network-security-containment
       - name: Toolchain
         href: secure/best-practices/toolchain.md
+
+    - name: Infrastructure and Development
+      items:
       - name: Infrastructure and development security best practices
         href: secure/security-best-practices-introduction.md
       - name: Infrastructure
-        href: secure/infrastructure-security-overview.md
-      - name: Infrastructure security strategy
-        href: secure/infrastructure-security-strategy.md
-      - name: Infrastructure security architecture
-        href: secure/infrastructure-security-architecture.md
-      - name: Infrastructure security implementation, operations, and governance
-        href: secure/infrastructure-security-implementation.md
-      - name: Operations
-        href: secure/infrastructure-security-operations-governance.md
+        items:        
+        - name: Infrastructure
+          href: secure/infrastructure-security-overview.md
+        - name: Infrastructure security strategy
+          href: secure/infrastructure-security-strategy.md
+        - name: Infrastructure security architecture
+          href: secure/infrastructure-security-architecture.md
+        - name: Infrastructure security implementation, operations, and governance
+          href: secure/infrastructure-security-implementation.md
+        - name: Operations
+          href: secure/infrastructure-security-operations-governance.md
       - name: Development
-        href: secure/development-security-strategy-overview.md
-      - name: Innovation security
-        href: secure/development-innovation-security.md
-      - name: DevSecOps as continuous improvement strategy
-        href: secure/devops-strategy-process-security.md
-      - name: Development security architecture
-        href: secure/development-security-architecture.md
-      - name: Development security implementation and operations
-        href: secure/development-security-implementation-operations.md
+        items:                  
+        - name: Development
+          href: secure/development-security-strategy-overview.md
+        - name: Innovation security
+          href: secure/development-innovation-security.md
+        - name: DevSecOps as continuous improvement strategy
+          href: secure/devops-strategy-process-security.md
+        - name: Development security architecture
+          href: secure/development-security-architecture.md
+        - name: Development security implementation and operations
+          href: secure/development-security-implementation-operations.md
+          
     - name: Security considerations
       items:
       - name: Security strategy
