--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -281,7 +281,7 @@ items:
           items: 
           - name: Overview
             href: ready/landing-zone/design-area/identity-access.md
-          - name: Active Directory
+          - name: Active Directory and Hybrid Identity
             href: ready/landing-zone/design-area/identity-access-active-directory-hybrid-identity.md
           - name: Platform access
             href: ready/landing-zone/design-area/identity-access-platform-access.md
