Cloud-scale analytics scenario: Update toc.yml for Purview name change
Updated toc.yml to reflect name change from Azure Purview to Microsoft Purview in Cloud-scale analytics scenario docs.

--- a/docs/scenarios/cloud-scale-analytics/toc.yml
+++ b/docs/scenarios/cloud-scale-analytics/toc.yml
@@ -187,7 +187,7 @@ items:
         href: ./best-practices/azure-databricks-implementation.md
       - name: Azure Synapse Analytics implementation
         href: ./best-practices/azure-synapse-analytics-implementation.md
-      - name: Azure Purview implementation
+      - name: Microsoft Purview implementation
         items:
         - name: Readiness checklist
           href: ./best-practices/purview-checklist.md
@@ -237,7 +237,7 @@ items:
       href: /azure/governance/policy/?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/cloud-scale-analytics/toc.json
     - name: Azure Private Link
       href: /azure/private-link/?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/cloud-scale-analytics/toc.json
-    - name: Azure Purview
+    - name: Microsoft Purview
       href: /azure/purview/?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/cloud-scale-analytics/toc.json
     - name: Azure Stream Analytics
       href: /azure/stream-analytics/?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/cloud-scale-analytics/toc.json
